// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/helpers/dispatch-common nda-паблик 1`] = `
Array [
  Array [
    Object {
      "host": "disk.yandex.ru",
      "pathname": "/public/nda",
      "query": Object {
        "hash": "long-hash",
      },
    },
  ],
]
`;

exports[`app/helpers/dispatch-common для домена com.tr 1`] = `
Array [
  Array [
    Object {
      "host": "disk.yandex.tr",
      "pathname": "/public",
      "query": Object {
        "hash": "long-hash",
      },
    },
  ],
]
`;

exports[`app/helpers/dispatch-common для домена com.tr 2`] = `
Array [
  Array [
    Object {
      "authSk": "generated sk",
      "availableLangs": Array [
        "tr",
        "en",
      ],
      "avatarsOrigin": "https://avatars.mdst.yandex.net",
      "bannerType": undefined,
      "countryIsoName": undefined,
      "currentLang": "ru",
      "experiments": Object {
        "boxes": Array [],
        "flags": Object {},
        "metrika": "",
      },
      "externalSk": "generated no salt sk",
      "fullTld": undefined,
      "fullscreenBanner": undefined,
      "geoTimezone": undefined,
      "iosAppMetrikaParams": Object {
        "appId": "2216086",
        "trackId": "458932812687381399",
      },
      "nda": false,
      "noAdv": undefined,
      "servicesTld": "tr",
      "sk": "generated sk",
      "useAdfox": undefined,
      "version": "45.0.0",
      "yandexuid": "test-yandexuid",
      "yapicOrigin": "https://yapic-test.yandex.ru",
    },
  ],
]
`;
